--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         <a href="#"><i class="fab fa-linkedin"></i></a>
         <a href="#"><i class="fab fa-x-twitter"></i></a>
       </div>
-      <button class="cv-btn">Download Resume</button>
+      <a href="files/Amasha_resume.pdf" download class="cv-btn">Download Resume</a>
+
     </div>
   </main>
 
@@ -288,7 +289,7 @@
         <span>Express JS</span>
         <span>Mongo DB</span>
       </div>
-      <a href="https://github.com/Ruvindi-Randeniya/HomeStock_MS.git" class="view-btn">View Project</a>
+      <a href="https://github.com/Ruvindi-Randeniya/HomeStock_MS.git" target="_blank" class="view-btn">View Project</a>
     </div>
 
   </div>
