--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
       <p class="subtitle">Frontend Developer | Web Interface Enthusiast</p>
 
       <div class="social-icons">
-        <a href="#"><i class="fab fa-github"></i></a>
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/AmaPrabuddi"><i class="fab fa-github"></i></a>
+        <a href="https://web.facebook.com/profile.php?id=100076334512127"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.linkedin.com/in/amasha-prabuddi-260285320/"><i class="fab fa-linkedin"></i></a>
         <a href="#"><i class="fab fa-x-twitter"></i></a>
       </div>
       <a href="files/Amasha_resume.pdf" download class="cv-btn">Download Resume</a>
