--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="hero-text">
       <h1 class="hello-text">Hi<span class="underline-line"></span></h1>
       <h2>I'm <span class="highlight-name">Amasha </span>Prabuddi</h2>
-      <p class="subtitle">Frontend Developer | Web Interface Enthusiast</p>
+      <p class="subtitle">Full-Stack Developer | Web Interface Enthusiast</p>
 
       <div class="social-icons">
         <a href="https://github.com/AmaPrabuddi"><i class="fab fa-github"></i></a>
